--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - uses: prem.vijoy/s3-sync-action@master
+      - uses: mit-pv/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete
         env:
